--- a/package.json
+++ b/package.json
@@ -7,9 +7,19 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+  "overrides": {
+    "autoprefixer": "10.4.5"
+  },
   "dependencies": {
+    "animate.css": "^4.1.1",
+    "bootstrap": "^5.1.3",
+    "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "firebase": "^9.8.1",
+    "v-animate-css": "^0.0.5",
+    "vue": "^2.6.14",
+    "vue-scrollto": "^2.20.0",
+    "vuefire": "^2.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -19,6 +29,8 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.52.1",
+    "sass-loader": "^13.0.0",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
